Flickr API added, Search Added, Detail page designing done, Local cache added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SWVL Movies Challange</string>
     <string name="title_item_detail">Item Detail</string>
+    <string name="movie">Movie</string>
 </resources>
